tests/conformance/syntax/positive/identifier_digit_after_first_valid.ditt
module Syntax.IdentifierDigitAfterFirst where

postulate C1 : Cat
a1 (x : C1) : C1 = x
