tests/conformance/syntax/negative/reserved_word_as_identifier.ditt
module Syntax.ReservedBad where

postulate module : Cat
id (x : module) : module = x
